--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^0.14.2
+  sqfentity: ^2.0.0
+  sqfentity_gen: ^2.0.0
+  http: ^0.13.3
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -41,6 +44,7 @@ dev_dependencies:
     sdk: flutter
   freezed: ^0.14.2
   build_runner: ^2.0.3
+  build_verify: ^2.0.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -61,7 +65,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/db/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
