--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,10 +30,16 @@ dependencies:
   flutter:
     sdk: flutter
   freezed_annotation: ^0.14.2
+  json_serializable: ^4.1.2
+  # SqfEntity dependencies
   sqfentity: ^2.0.0
   sqfentity_gen: ^2.0.0
   http: ^0.13.3
-
+  flutter_bloc: ^7.0.0
+  # Service locator dependencies, DI
+  injectable: ^1.4.0
+  get_it: ^7.1.3
+  persistent_bottom_nav_bar: ^4.0.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -43,8 +49,11 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^0.14.2
+  # SqfEntity dependencies
   build_runner: ^2.0.3
   build_verify: ^2.0.0
+  # Service locator dependencies, DI
+  injectable_generator: ^1.4.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -81,17 +90,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+# fonts:
+#   - family: Schyler
+#     fonts:
+#       - asset: fonts/Schyler-Regular.ttf
+#       - asset: fonts/Schyler-Italic.ttf
+#         style: italic
+#   - family: Trajan Pro
+#     fonts:
+#       - asset: fonts/TrajanPro.ttf
+#       - asset: fonts/TrajanPro_Bold.ttf
+#         weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
