--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   injectable: ^1.4.0
   get_it: ^7.1.3
   persistent_bottom_nav_bar: ^4.0.2
+  google_fonts: ^2.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
